--- a/package.json
+++ b/package.json
@@ -12,14 +12,21 @@
     "@types/react": "^16.9.0",
     "@types/react-bootstrap": "^0.32.24",
     "@types/react-dom": "^16.9.0",
+    "@types/react-router": "^5.1.8",
+    "@types/react-router-bootstrap": "^0.24.5",
     "@types/react-router-dom": "^5.1.6",
+    "@types/styled-components": "^5.1.4",
     "axios": "^0.21.0",
     "bootstrap": "^4.5.3",
     "react": "^17.0.0",
     "react-bootstrap": "^1.4.0",
     "react-dom": "^17.0.0",
+    "react-icons": "^3.11.0",
+    "react-router": "^5.2.0",
+    "react-router-bootstrap": "^0.25.0",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "^4.0.0",
+    "react-scripts": "^3.4.1",
+    "styled-components": "^5.2.0",
     "typescript": "^4.0.3"
   },
   "scripts": {
