--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@types/node": "^12.0.0",
     "@types/react": "^16.9.0",
     "@types/react-bootstrap": "^0.32.24",
+    "@types/react-bootstrap-typeahead": "^3.4.6",
     "@types/react-dom": "^16.9.0",
     "@types/react-router": "^5.1.8",
     "@types/react-router-bootstrap": "^0.24.5",
@@ -20,8 +21,10 @@
     "bootstrap": "^4.5.3",
     "react": "^17.0.0",
     "react-bootstrap": "^1.4.0",
+    "react-bootstrap-typeahead": "^5.1.2",
     "react-dom": "^17.0.0",
     "react-icons": "^3.11.0",
+    "react-modern-calendar-datepicker": "^3.1.6",
     "react-router": "^5.2.0",
     "react-router-bootstrap": "^0.25.0",
     "react-router-dom": "^5.2.0",
