Reviewed eslint setting

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -31,15 +31,11 @@
     }
   },
   "rules": {
-    "@typescript-eslint/indent": ["error",2],
-    "@typescript-eslint/prefer-interface": "off",
-    "arrow-body-style": ["error", "always"],
     "react/jsx-filename-extension": [
       "error",
       { "extensions": [".jsx", ".tsx"] }
     ],
     "react/prop-types": "off",
-    "spaced-comment": ["error","always", { "markers": ["/ <reference"] }],
     "no-use-before-define": "off",
     "no-param-reassign": ["error", { "props": false }],
     "import/extensions": ["error", "ignorePackages", {
@@ -47,6 +43,13 @@
       "jsx": "never",
       "ts": "never",
       "tsx": "never"
+    }],
+    "import/order": [ "error", {
+      "newlines-between": "always",
+      "alphabetize": {
+        "order": "asc",
+        "caseInsensitive": true
+      }
     }]
   }
 }
