--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@types/styled-components": "^5.1.4",
     "axios": "^0.21.0",
     "bootstrap": "^4.5.3",
+    "eslint": "^7.14.0",
     "react": "^17.0.0",
     "react-bootstrap": "^1.4.0",
     "react-bootstrap-typeahead": "^5.1.2",
