--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
     "typescript": "^4.0.3"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "PORT=3020 react-scripts start",
     "lint": "eslint . --ext .tsx --ext .ts",
     "build": "react-scripts build",
     "test": "react-scripts test",
