--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/react-bootstrap": "^0.32.24",
     "@types/react-bootstrap-typeahead": "^3.4.6",
     "@types/react-dom": "^16.9.0",
+    "@types/react-responsive": "^8.0.2",
     "@types/react-router": "^5.1.8",
     "@types/react-router-bootstrap": "^0.24.5",
     "@types/react-router-dom": "^5.1.6",
@@ -26,6 +27,7 @@
     "react-dom": "^17.0.0",
     "react-icons": "^3.11.0",
     "react-modern-calendar-datepicker": "^3.1.6",
+    "react-responsive": "^8.2.0",
     "react-router": "^5.2.0",
     "react-router-bootstrap": "^0.25.0",
     "react-router-dom": "^5.2.0",
