Add CRUD StuffRelations

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -52,6 +52,9 @@
         "order": "asc",
         "caseInsensitive": true
       }
+    }],
+    "sort-imports": [ "error", {
+      "ignoreDeclarationSort": true
     }]
   }
 }
